environments/base/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustomize-microservices-api
  labels:
    app: kustomize-microservices-api
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: kustomize-microservices-api
