environments/base/server/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kustomize-microservices-api
  labels:
    app: kustomize-microservices-api
spec:
  to:
    kind: Service
    name: kustomize-microservices-api
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
